# serializer version: 1
# name: test_api[daily_forecast]
  list([
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1018.9,
      'symbol': 6,
      'temperature': 1.0,
      'temperature_max': 1.0,
      'temperature_min': 1.0,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 20, 19, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.8,
      'wind_direction': 114,
      'wind_gust': 5.8,
      'wind_speed': 2.5,
    }),
    dict({
      'frozen_precipitation': 1,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1012.3,
      'symbol': 18,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.5,
      'valid_time': datetime.datetime(2025, 1, 21, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.9,
      'wind_direction': 239,
      'wind_gust': 4.5,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1009.5,
      'symbol': 18,
      'temperature': 3.5,
      'temperature_max': 3.5,
      'temperature_min': 3.5,
      'thunder': 1,
      'total_cloud': 100,
      'total_precipitation': 0.2,
      'valid_time': datetime.datetime(2025, 1, 22, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.5,
      'wind_direction': 217,
      'wind_gust': 5.0,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 13,
      'high_cloud': 100,
      'humidity': 99,
      'low_cloud': 100,
      'max_precipitation': 2.4,
      'mean_precipitation': 2.4,
      'median_precipitation': 0.05,
      'medium_cloud': 100,
      'min_precipitation': 1.8,
      'precipitation_category': 3,
      'pressure': 997.3,
      'symbol': 18,
      'temperature': 1.4,
      'temperature_max': 1.4,
      'temperature_min': 1.4,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 3.0,
      'valid_time': datetime.datetime(2025, 1, 23, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 1.4,
      'wind_direction': 126,
      'wind_gust': 12.6,
      'wind_speed': 6.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 1.2,
      'mean_precipitation': 0.6,
      'median_precipitation': 0.02,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 4,
      'pressure': 998.3,
      'symbol': 18,
      'temperature': 1.9,
      'temperature_max': 1.9,
      'temperature_min': 1.9,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 9.6,
      'valid_time': datetime.datetime(2025, 1, 24, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 34.2,
      'wind_direction': 261,
      'wind_gust': 8.6,
      'wind_speed': 3.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 65,
      'low_cloud': 50,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 995.2,
      'symbol': 3,
      'temperature': 6.5,
      'temperature_max': 6.5,
      'temperature_min': 6.5,
      'thunder': 0,
      'total_cloud': 50,
      'total_precipitation': 1.2,
      'valid_time': datetime.datetime(2025, 1, 25, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 21.7,
      'wind_direction': 250,
      'wind_gust': 15.0,
      'wind_speed': 7.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 51,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1008.2,
      'symbol': 6,
      'temperature': 3.5,
      'temperature_max': 3.5,
      'temperature_min': 3.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2025, 1, 26, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 29.7,
      'wind_direction': 211,
      'wind_gust': 10.3,
      'wind_speed': 4.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 86,
      'low_cloud': 88,
      'max_precipitation': 4.8,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1006.7,
      'symbol': 6,
      'temperature': 3.5,
      'temperature_max': 3.5,
      'temperature_min': 3.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 1.2,
      'valid_time': datetime.datetime(2025, 1, 27, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 39.6,
      'wind_direction': 170,
      'wind_gust': 9.5,
      'wind_speed': 4.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 85,
      'low_cloud': 50,
      'max_precipitation': 6.0,
      'mean_precipitation': 1.2,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1003.5,
      'symbol': 6,
      'temperature': 4.9,
      'temperature_max': 4.9,
      'temperature_min': 4.9,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 2.4,
      'valid_time': datetime.datetime(2025, 1, 28, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 37.3,
      'wind_direction': 170,
      'wind_gust': 10.2,
      'wind_speed': 5.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 82,
      'low_cloud': 62,
      'max_precipitation': 8.4,
      'mean_precipitation': 1.2,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1008.9,
      'symbol': 6,
      'temperature': 4.5,
      'temperature_max': 4.5,
      'temperature_min': 4.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 2.4,
      'valid_time': datetime.datetime(2025, 1, 29, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 43.1,
      'wind_direction': 194,
      'wind_gust': 9.7,
      'wind_speed': 4.9,
    }),
  ])
# ---
# name: test_api[hourly_forecast]
  list([
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1018.9,
      'symbol': 6,
      'temperature': 1.0,
      'temperature_max': 1.0,
      'temperature_min': 1.0,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 20, 19, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.8,
      'wind_direction': 114,
      'wind_gust': 5.8,
      'wind_speed': 2.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1018.9,
      'symbol': 6,
      'temperature': 1.1,
      'temperature_max': 1.1,
      'temperature_min': 1.1,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 20, 20, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.8,
      'wind_direction': 124,
      'wind_gust': 5.1,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1018.7,
      'symbol': 6,
      'temperature': 1.2,
      'temperature_max': 1.2,
      'temperature_min': 1.2,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 20, 21, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.5,
      'wind_direction': 131,
      'wind_gust': 4.5,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1018.2,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 20, 22, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.5,
      'wind_direction': 127,
      'wind_gust': 4.0,
      'wind_speed': 2.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1017.5,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 20, 23, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.4,
      'wind_direction': 123,
      'wind_gust': 3.9,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1016.8,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.4,
      'wind_direction': 126,
      'wind_gust': 4.7,
      'wind_speed': 2.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1016.2,
      'symbol': 6,
      'temperature': 1.4,
      'temperature_max': 1.4,
      'temperature_min': 1.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 1, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.4,
      'wind_direction': 122,
      'wind_gust': 4.8,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1015.8,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 2, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.0,
      'wind_direction': 118,
      'wind_gust': 4.6,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 25,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1015.5,
      'symbol': 6,
      'temperature': 1.4,
      'temperature_max': 1.4,
      'temperature_min': 1.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 3, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.7,
      'wind_direction': 121,
      'wind_gust': 4.0,
      'wind_speed': 1.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 12,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1015.0,
      'symbol': 6,
      'temperature': 1.4,
      'temperature_max': 1.4,
      'temperature_min': 1.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 4, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.9,
      'wind_direction': 105,
      'wind_gust': 3.3,
      'wind_speed': 1.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1014.2,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 5, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.2,
      'wind_direction': 93,
      'wind_gust': 3.8,
      'wind_speed': 2.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1013.7,
      'symbol': 6,
      'temperature': 1.6,
      'temperature_max': 1.6,
      'temperature_min': 1.6,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 6, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.0,
      'wind_direction': 96,
      'wind_gust': 5.0,
      'wind_speed': 2.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 98,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1013.5,
      'symbol': 18,
      'temperature': 1.7,
      'temperature_max': 1.7,
      'temperature_min': 1.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 7, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.6,
      'wind_direction': 100,
      'wind_gust': 5.0,
      'wind_speed': 2.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 98,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1013.4,
      'symbol': 6,
      'temperature': 1.7,
      'temperature_max': 1.7,
      'temperature_min': 1.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 8, 0, tzinfo=datetime.timezone.utc),
      'visibility': 4.4,
      'wind_direction': 110,
      'wind_gust': 4.2,
      'wind_speed': 1.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 98,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1013.2,
      'symbol': 18,
      'temperature': 1.8,
      'temperature_max': 1.8,
      'temperature_min': 1.8,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 9, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.5,
      'wind_direction': 106,
      'wind_gust': 3.5,
      'wind_speed': 1.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 98,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1013.1,
      'symbol': 18,
      'temperature': 1.8,
      'temperature_max': 1.8,
      'temperature_min': 1.8,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 10, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.3,
      'wind_direction': 140,
      'wind_gust': 3.2,
      'wind_speed': 1.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1012.8,
      'symbol': 18,
      'temperature': 1.7,
      'temperature_max': 1.7,
      'temperature_min': 1.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 11, 0, tzinfo=datetime.timezone.utc),
      'visibility': 6.7,
      'wind_direction': 216,
      'wind_gust': 2.9,
      'wind_speed': 1.5,
    }),
    dict({
      'frozen_precipitation': 1,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1012.3,
      'symbol': 18,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.9,
      'wind_direction': 239,
      'wind_gust': 4.5,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 1,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1012.0,
      'symbol': 6,
      'temperature': 1.3,
      'temperature_max': 1.3,
      'temperature_min': 1.3,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 13, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.2,
      'wind_direction': 258,
      'wind_gust': 4.9,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 1,
      'high_cloud': 100,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1011.9,
      'symbol': 6,
      'temperature': 1.3,
      'temperature_max': 1.3,
      'temperature_min': 1.3,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 14, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.4,
      'wind_direction': 258,
      'wind_gust': 4.9,
      'wind_speed': 2.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1012.0,
      'symbol': 6,
      'temperature': 0.9,
      'temperature_max': 0.9,
      'temperature_min': 0.9,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 15, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.2,
      'wind_direction': 241,
      'wind_gust': 4.3,
      'wind_speed': 1.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.9,
      'symbol': 6,
      'temperature': 0.4,
      'temperature_max': 0.4,
      'temperature_min': 0.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 16, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.2,
      'wind_direction': 214,
      'wind_gust': 3.4,
      'wind_speed': 1.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.9,
      'symbol': 6,
      'temperature': 0.7,
      'temperature_max': 0.7,
      'temperature_min': 0.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 17, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.7,
      'wind_direction': 201,
      'wind_gust': 2.9,
      'wind_speed': 1.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.8,
      'symbol': 6,
      'temperature': 0.9,
      'temperature_max': 0.9,
      'temperature_min': 0.9,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 18, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.2,
      'wind_direction': 194,
      'wind_gust': 3.1,
      'wind_speed': 1.5,
    }),
    dict({
      'frozen_precipitation': 20,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1011.7,
      'symbol': 6,
      'temperature': 1.2,
      'temperature_max': 1.2,
      'temperature_min': 1.2,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 19, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.9,
      'wind_direction': 204,
      'wind_gust': 4.3,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 88,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.6,
      'symbol': 6,
      'temperature': 1.4,
      'temperature_max': 1.4,
      'temperature_min': 1.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 20, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.8,
      'wind_direction': 212,
      'wind_gust': 4.8,
      'wind_speed': 2.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.7,
      'symbol': 6,
      'temperature': 1.2,
      'temperature_max': 1.2,
      'temperature_min': 1.2,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 21, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.2,
      'wind_direction': 215,
      'wind_gust': 5.5,
      'wind_speed': 2.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 12,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.6,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 22, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.1,
      'wind_direction': 206,
      'wind_gust': 5.5,
      'wind_speed': 2.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 62,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 12,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.5,
      'symbol': 6,
      'temperature': 1.6,
      'temperature_max': 1.6,
      'temperature_min': 1.6,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 21, 23, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.3,
      'wind_direction': 202,
      'wind_gust': 5.0,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.3,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.2,
      'wind_direction': 199,
      'wind_gust': 5.0,
      'wind_speed': 2.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 62,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 25,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.1,
      'symbol': 6,
      'temperature': 1.6,
      'temperature_max': 1.6,
      'temperature_min': 1.6,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 1, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.9,
      'wind_direction': 199,
      'wind_gust': 5.2,
      'wind_speed': 2.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 38,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 25,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1010.8,
      'symbol': 6,
      'temperature': 1.2,
      'temperature_max': 1.2,
      'temperature_min': 1.2,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 2, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.1,
      'wind_direction': 198,
      'wind_gust': 5.2,
      'wind_speed': 2.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 12,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1010.5,
      'symbol': 6,
      'temperature': 1.3,
      'temperature_max': 1.3,
      'temperature_min': 1.3,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 3, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.8,
      'wind_direction': 204,
      'wind_gust': 4.9,
      'wind_speed': 2.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 62,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1010.1,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 4, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.9,
      'wind_direction': 201,
      'wind_gust': 5.0,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 12,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1010.0,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 5, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.4,
      'wind_direction': 207,
      'wind_gust': 4.4,
      'wind_speed': 2.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1009.8,
      'symbol': 6,
      'temperature': 1.7,
      'temperature_max': 1.7,
      'temperature_min': 1.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 6, 0, tzinfo=datetime.timezone.utc),
      'visibility': 42.8,
      'wind_direction': 209,
      'wind_gust': 4.9,
      'wind_speed': 2.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 88,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1009.9,
      'symbol': 6,
      'temperature': 1.8,
      'temperature_max': 1.8,
      'temperature_min': 1.8,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 7, 0, tzinfo=datetime.timezone.utc),
      'visibility': 42.8,
      'wind_direction': 206,
      'wind_gust': 4.8,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 88,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 88,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1010.0,
      'symbol': 6,
      'temperature': 2.1,
      'temperature_max': 2.1,
      'temperature_min': 2.1,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 8, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.0,
      'wind_direction': 207,
      'wind_gust': 4.4,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 88,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1010.0,
      'symbol': 6,
      'temperature': 2.4,
      'temperature_max': 2.4,
      'temperature_min': 2.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 9, 0, tzinfo=datetime.timezone.utc),
      'visibility': 42.9,
      'wind_direction': 209,
      'wind_gust': 4.5,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 88,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1010.0,
      'symbol': 6,
      'temperature': 2.9,
      'temperature_max': 2.9,
      'temperature_min': 2.9,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 10, 0, tzinfo=datetime.timezone.utc),
      'visibility': 43.0,
      'wind_direction': 215,
      'wind_gust': 4.7,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 88,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1009.8,
      'symbol': 18,
      'temperature': 3.2,
      'temperature_max': 3.2,
      'temperature_min': 3.2,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 11, 0, tzinfo=datetime.timezone.utc),
      'visibility': 42.9,
      'wind_direction': 217,
      'wind_gust': 4.8,
      'wind_speed': 2.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1009.5,
      'symbol': 18,
      'temperature': 3.5,
      'temperature_max': 3.5,
      'temperature_min': 3.5,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.5,
      'wind_direction': 217,
      'wind_gust': 5.0,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1009.3,
      'symbol': 6,
      'temperature': 3.1,
      'temperature_max': 3.1,
      'temperature_min': 3.1,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 13, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.4,
      'wind_direction': 216,
      'wind_gust': 4.5,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1009.2,
      'symbol': 6,
      'temperature': 2.8,
      'temperature_max': 2.8,
      'temperature_min': 2.8,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 14, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.4,
      'wind_direction': 214,
      'wind_gust': 4.3,
      'wind_speed': 2.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1009.2,
      'symbol': 6,
      'temperature': 2.5,
      'temperature_max': 2.5,
      'temperature_min': 2.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 15, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.2,
      'wind_direction': 208,
      'wind_gust': 4.1,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1009.2,
      'symbol': 6,
      'temperature': 2.2,
      'temperature_max': 2.2,
      'temperature_min': 2.2,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 16, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.1,
      'wind_direction': 208,
      'wind_gust': 4.3,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1009.0,
      'symbol': 6,
      'temperature': 2.1,
      'temperature_max': 2.1,
      'temperature_min': 2.1,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 17, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.1,
      'wind_direction': 214,
      'wind_gust': 4.3,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 88,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1009.0,
      'symbol': 6,
      'temperature': 1.8,
      'temperature_max': 1.8,
      'temperature_min': 1.8,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2025, 1, 22, 18, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.1,
      'wind_direction': 213,
      'wind_gust': 3.9,
      'wind_speed': 1.7,
    }),
  ])
# ---
# name: test_api[twice_daily_forecast]
  list([
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1018.9,
      'symbol': 6,
      'temperature': 1.0,
      'temperature_max': 1.0,
      'temperature_min': 1.0,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 20, 19, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.8,
      'wind_direction': 114,
      'wind_gust': 5.8,
      'wind_speed': 2.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1016.8,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2025, 1, 21, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.4,
      'wind_direction': 126,
      'wind_gust': 4.7,
      'wind_speed': 2.5,
    }),
    dict({
      'frozen_precipitation': 1,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1012.3,
      'symbol': 18,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.4,
      'valid_time': datetime.datetime(2025, 1, 21, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.9,
      'wind_direction': 239,
      'wind_gust': 4.5,
      'wind_speed': 2.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1011.3,
      'symbol': 6,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2025, 1, 22, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.2,
      'wind_direction': 199,
      'wind_gust': 5.0,
      'wind_speed': 2.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 62,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1009.5,
      'symbol': 18,
      'temperature': 3.5,
      'temperature_max': 3.5,
      'temperature_min': 3.5,
      'thunder': 1,
      'total_cloud': 100,
      'total_precipitation': 0.1,
      'valid_time': datetime.datetime(2025, 1, 22, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.5,
      'wind_direction': 217,
      'wind_gust': 5.0,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 99,
      'low_cloud': 50,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1007.4,
      'symbol': 6,
      'temperature': 0.8,
      'temperature_max': 0.8,
      'temperature_min': 0.8,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2025, 1, 23, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 2.0,
      'wind_direction': 144,
      'wind_gust': 3.2,
      'wind_speed': 1.9,
    }),
    dict({
      'frozen_precipitation': 13,
      'high_cloud': 100,
      'humidity': 99,
      'low_cloud': 100,
      'max_precipitation': 2.4,
      'mean_precipitation': 2.4,
      'median_precipitation': 0.05,
      'medium_cloud': 100,
      'min_precipitation': 1.8,
      'precipitation_category': 3,
      'pressure': 997.3,
      'symbol': 18,
      'temperature': 1.4,
      'temperature_max': 1.4,
      'temperature_min': 1.4,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.6,
      'valid_time': datetime.datetime(2025, 1, 23, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 1.4,
      'wind_direction': 126,
      'wind_gust': 12.6,
      'wind_speed': 6.7,
    }),
    dict({
      'frozen_precipitation': 63,
      'high_cloud': 12,
      'humidity': 92,
      'low_cloud': 100,
      'max_precipitation': 2.4,
      'mean_precipitation': 1.8,
      'median_precipitation': 0.05,
      'medium_cloud': 100,
      'min_precipitation': 1.2,
      'precipitation_category': 2,
      'pressure': 991.1,
      'symbol': 22,
      'temperature': 1.6,
      'temperature_max': 1.6,
      'temperature_min': 1.6,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 7.2,
      'valid_time': datetime.datetime(2025, 1, 24, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 38.8,
      'wind_direction': 241,
      'wind_gust': 9.4,
      'wind_speed': 5.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 1.2,
      'mean_precipitation': 0.6,
      'median_precipitation': 0.02,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 4,
      'pressure': 998.3,
      'symbol': 18,
      'temperature': 1.9,
      'temperature_max': 1.9,
      'temperature_min': 1.9,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2025, 1, 24, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 34.2,
      'wind_direction': 261,
      'wind_gust': 8.6,
      'wind_speed': 3.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.6,
      'mean_precipitation': 0.6,
      'median_precipitation': 0.02,
      'medium_cloud': 100,
      'min_precipitation': 0.6,
      'precipitation_category': 3,
      'pressure': 997.7,
      'symbol': 18,
      'temperature': 2.0,
      'temperature_max': 2.0,
      'temperature_min': 2.0,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2025, 1, 25, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 2.7,
      'wind_direction': 190,
      'wind_gust': 8.1,
      'wind_speed': 4.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 65,
      'low_cloud': 50,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 995.2,
      'symbol': 3,
      'temperature': 6.5,
      'temperature_max': 6.5,
      'temperature_min': 6.5,
      'thunder': 0,
      'total_cloud': 50,
      'total_precipitation': 0.6,
      'valid_time': datetime.datetime(2025, 1, 25, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 21.7,
      'wind_direction': 250,
      'wind_gust': 15.0,
      'wind_speed': 7.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 68,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1004.3,
      'symbol': 1,
      'temperature': 4.3,
      'temperature_max': 4.3,
      'temperature_min': 4.3,
      'thunder': 0,
      'total_cloud': 0,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2025, 1, 26, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 20.0,
      'wind_direction': 265,
      'wind_gust': 19.2,
      'wind_speed': 9.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 51,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1008.2,
      'symbol': 6,
      'temperature': 3.5,
      'temperature_max': 3.5,
      'temperature_min': 3.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2025, 1, 26, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 29.7,
      'wind_direction': 211,
      'wind_gust': 10.3,
      'wind_speed': 4.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 94,
      'low_cloud': 50,
      'max_precipitation': 9.6,
      'mean_precipitation': 1.2,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1008.8,
      'symbol': 6,
      'temperature': 1.2,
      'temperature_max': 1.2,
      'temperature_min': 1.2,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 27, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 20.1,
      'wind_direction': 208,
      'wind_gust': 8.2,
      'wind_speed': 4.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 86,
      'low_cloud': 88,
      'max_precipitation': 4.8,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1006.7,
      'symbol': 6,
      'temperature': 3.5,
      'temperature_max': 3.5,
      'temperature_min': 3.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 27, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 39.6,
      'wind_direction': 170,
      'wind_gust': 9.5,
      'wind_speed': 4.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 62,
      'humidity': 93,
      'low_cloud': 88,
      'max_precipitation': 4.8,
      'mean_precipitation': 1.2,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1003.8,
      'symbol': 6,
      'temperature': 2.4,
      'temperature_max': 2.4,
      'temperature_min': 2.4,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 28, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 23.9,
      'wind_direction': 158,
      'wind_gust': 9.2,
      'wind_speed': 4.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 85,
      'low_cloud': 50,
      'max_precipitation': 6.0,
      'mean_precipitation': 1.2,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1003.5,
      'symbol': 6,
      'temperature': 4.9,
      'temperature_max': 4.9,
      'temperature_min': 4.9,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 28, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 37.3,
      'wind_direction': 170,
      'wind_gust': 10.2,
      'wind_speed': 5.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 12,
      'humidity': 90,
      'low_cloud': 100,
      'max_precipitation': 8.4,
      'mean_precipitation': 1.2,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1006.4,
      'symbol': 6,
      'temperature': 3.0,
      'temperature_max': 3.0,
      'temperature_min': 3.0,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 29, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 28.7,
      'wind_direction': 191,
      'wind_gust': 9.6,
      'wind_speed': 4.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 82,
      'low_cloud': 62,
      'max_precipitation': 8.4,
      'mean_precipitation': 1.2,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1008.9,
      'symbol': 6,
      'temperature': 4.5,
      'temperature_max': 4.5,
      'temperature_min': 4.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 29, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 43.1,
      'wind_direction': 194,
      'wind_gust': 9.7,
      'wind_speed': 4.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 3.6,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 0.0,
      'precipitation_category': 3,
      'pressure': 1010.3,
      'symbol': 6,
      'temperature': 2.2,
      'temperature_max': 2.2,
      'temperature_min': 2.2,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0,
      'valid_time': datetime.datetime(2025, 1, 30, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 26.1,
      'wind_direction': 174,
      'wind_gust': 8.4,
      'wind_speed': 4.2,
    }),
  ])
# ---
